--- a/src/project.rmd
+++ b/src/project.rmd
@@ -9,7 +9,7 @@ title: metabolomic - paper
 ```{r}
 library(readxl)
 data <- read_excel(
-    "../Input/Datenbank_Steroide_gruppiert_230421.xlsx",
+    "Input/Datenbank_Steroide_gruppiert_230421.xlsx",
     skip = 1, sheet = "Steroids", col_names = TRUE)
 ```
 
@@ -17,21 +17,21 @@ data <- read_excel(
 library(dplyr)
 
 dat1 <- data.frame(data, row.names = data$"Pat.-Nr.")
-datAll <- dat1 %>% select(-1)
-dat1 <- datAll %>% select(-1)
 
+# Remove the Pat.-Nr., Sex and the Age
+dat1 <- dat1 %>% select(-1, -2, -3)
 ``` 
 
 ### Removing non applicable data points
 ```{r}
-
 # Function to Remove all 'NA' from the data
 replacezero <- function(x) "[<-"(x, !x | is.na(x), min(x[x > 0],na.rm = TRUE) / 2)
 
 # apply the function to our data, renaming it to 'dat2' in the process
 dat2 <- as.data.frame(t(apply(dat1, 1, replacezero)))
 
-str(dat2)
+
+sum(is.na(dat2))
 ```
 
 ## Transform data to logarithmic with base 2
@@ -50,15 +50,8 @@ paretoscale <- function(z) {
 }
 
 # Pareto scale log transformed data
-logdata.pareto <- paretoscale(logdata)
-```
+logdata.pareto <- scale(paretoscale(logdata))
 
-
-```{r}
-head(logdata.pareto)
-head(logdata)
-
-boxplot(logdata)
 boxplot(logdata.pareto)
 ```
 
@@ -88,16 +81,6 @@ results <- summary(pca)
 
 names(results)
 
-# Make a simple scores plot
-plot(pca$x[,1], pca$x[,2], type='p', cex=0, pch=20, main="Scores Plot", xlab="PC1", ylab="PC2")
-text(pca$x[,1], pca$x[,2], labels=rownames(pca$x), cex=1.0)
-abline(h=0, v=0, col="red")
-
-# Make a simple loadings plot (variance among variables)
-plot(pca$rotation[,1], pca$rotation[,2], type='p', cex=0.5, pch=20,main="Loadings Plot", xlab="PC1", ylab="PC2")
-abline(h=0, v=0, col="red")
-
-
 # Extract PCA results into data frames
 
 scree.data <- as.data.frame(results$importance)
@@ -111,8 +94,6 @@ abline(v=-pvalue, col="red")
 abline(h=pvalue, col="red")
 abline(h=-pvalue, col="red")
 
-
-
 # Make a new data frame with PC1, PC2, and PC3 loadings
 loadings.PC1.PC2 <- loadings.data[,1:3]
 loadings.PC1.PC2[1:6,1:3]  # look at the first few rows
@@ -124,6 +105,8 @@ loadings.sig <- subset(loadings.PC1.PC2,
 
 # sanity check - plot the results
 plot(loadings.sig$PC1, loadings.sig$PC2)
+
+# logdata.pareto.subset <- subset(logdata.pareto, rownames(logdata.pareto) %in% rownames(loadings.sig))
 ```
 
 ```{r}
@@ -132,39 +115,68 @@ plot(loadings.sig$PC1, loadings.sig$PC2)
 ####################################################
 
 library(gplots)
-heatmap.2(as.matrix(logdata.pareto))
+heatmap.2(as.matrix(logdata.pareto), cexRow=0.5, cexCol=0.5 )
 
 ```
 
-```{r}
-boxplot(logdata.pareto)
-
-```
-
+## Clustering
 
 ```{r}
-library(ggfortify)
-autoplot(pca,loadings = TRUE,loadings.label = TRUE)
-
-#### Exkurs ins andere R-Skript
-# Cluster: Partitioning Around Medoids (a more robust version of K-means)
-
-library(cluster)# Heatmaps + Cluster Analysis
-library(pheatmap)
-pheatmap(logdata,scale = "none", cluster_rows = T, cluster_cols = T)
-pheatmap(logdata.pareto,scale = "none", cluster_rows = T, cluster_cols = T)
-
-
-#### try to fix the pam clara thing 
-#### funktioniert ist aber nicht schön:
-
-# colnames(logdata.pareto) = paste("Metabolit_", 1:32, sep = "")
-
-#### 
+# library(factoextra)
+library(cluster)
 library(ggplot2)
-clara.result <- (clara(logdata.pareto, 5))
 
-autoplot(clara.result, frame = TRUE, frame.type = "norm", loadings = TRUE,loadings.label = FALSE)
+gap_stat <- clusGap(logdata.pareto,
+                    FUN = kmeans,
+                    K.max = 5)
 
-head(clara.result)
+# fviz_gap_stat(gap_stat)
+
+result <- (clara(logdata.pareto, 3))
+
+# fviz_cluster(result, data = logdata.pareto)
+
+```
+
+```{r}
+is.data.frame(logdata.pareto)
+```
+
+```{r}
+library(tibble)
+clustered_data <- as.data.frame(logdata.pareto) %>% add_column(cluster = result$clustering)
+```
+
+```{r}
+boxplot(clustered_data[clustered_data$cluster == 2,])
+```
+
+```{r}
+library(gridExtra)
+plot_list <- list()
+
+for (cluster in unique(clustered_data$cluster)) {
+  plot_list[[cluster]] <- boxplot(clustered_data[clustered_data$cluster == cluster,], main=cluster)
+  plot
+}
+plot_grob <- arrangeGrob(grobs=plot_list)
+grid.arrange(plot_grob)
+# plot_grob
+```
+
+
+```{r}
+plot(rep(10,30), rep(10,30), type="l", xlab="Metabolite", ylab="Concentration", main="Cluster 1")
+
+```
+```{r}
+
+library(ggplot2)
+
+x <- data.frame('One' = c(0, 4, 17), 'Two' = c(10, 20, 39), 'Three' = c(19, 3, 3))
+# x <- melt(x)
+
+plt <- ggplot(data = x, aes(x = 1, y = 2))
+plt + geom_boxplot() + theme_minimal() + labs(x = "Title", y = "x")
+
 ```
