--- a/src/project.rmd
+++ b/src/project.rmd
@@ -6,12 +6,16 @@ title: metabolomic - paper
 ## Initialization with data
 ### Read the data from the excel sheet
 
+Since the data is in an `excel sheet` we will ned the library `readxl` to gather our data, we take precautions to select the correct sheet and make sure to only select the data that we actually want.
 ```{r}
 library(readxl)
 data <- read_excel(
-    "../Input/Datenbank_Steroide_gruppiert_230421.xlsx",
-    skip = 1, sheet = "Steroids", col_names = TRUE)
+  "../Input/Datenbank_Steroide_gruppiert_230421.xlsx",
+  skip = 1, sheet = "Steroids", col_names = TRUE
+)
 ```
+
+To make sure that there are only true `variables` in our dataset we used the column `Pat.-Nr.` as the row names and remove it, sex and age from our dataset.
 
 ```{r}
 library(dplyr)
@@ -22,10 +26,15 @@ dat1 <- data.frame(data, row.names = data$"Pat.-Nr.")
 dat1 <- dat1 %>% select(-1, -2, -3)
 ``` 
 
-### Removing non applicable data points
+## Removing non applicable data points
+
+### Removing `Non Applicable` Values
+
+Since our data is containing `na` values, we will have to make sure not to include them in our final calculations, we use the `replacezero` function to replace them with a number half the smallest number found that is still larger than zero.
+
 ```{r}
 # Function to Remove all 'NA' from the data
-replacezero <- function(x) "[<-"(x, !x | is.na(x), min(x[x > 0],na.rm = TRUE) / 2)
+replacezero <- function(x) "[<-"(x, !x | is.na(x), min(x[x > 0], na.rm = TRUE) / 2)
 
 # apply the function to our data, renaming it to 'dat2' in the process
 dat2 <- as.data.frame(t(apply(dat1, 1, replacezero)))
@@ -34,7 +43,10 @@ dat2 <- as.data.frame(t(apply(dat1, 1, replacezero)))
 sum(is.na(dat2))
 ```
 
-## Transform data to logarithmic with base 2
+### Transform data to logarithmic with base 2
+
+Since we want to see the change between our variables, we can use a logarithm with a base of two (also called logarithm naturalis) to confine our variables in the logarithmic scale.
+To further scale our data the function `paretoscale` is used to calculate different metrics and apply them.
 
 ```{r}
 logdata <- log(dat2, 2)
@@ -42,10 +54,10 @@ logdata <- log(dat2, 2)
 # Function for pareto scaling
 paretoscale <- function(z) {
   rowmean <- apply(z, 1, mean) # row means
-  rowsd <- apply(z, 1, sd)  # row standard deviation
+  rowsd <- apply(z, 1, sd) # row standard deviation
   rowsqrtsd <- sqrt(rowsd) # sqrt of sd
-  rv <- sweep(z, 1, rowmean,"-")  # mean center
-  rv <- sweep(rv, 1, rowsqrtsd, "/")  # dividing by sqrtsd
+  rv <- sweep(z, 1, rowmean, "-") # mean center
+  rv <- sweep(rv, 1, rowsqrtsd, "/") # dividing by sqrtsd
   return(rv)
 }
 
@@ -55,10 +67,22 @@ logdata.pareto <- scale(paretoscale(logdata))
 boxplot(logdata.pareto)
 ```
 
-## Principal Component analysis
+## Principal Component Analysis
+
+The `Principal Component Analysis` is able to calculate the significance of our data and in turn minimize their dimensions, commonly referred to as `dimension reduction`. 
 
 ```{r}
-pca <- prcomp(logdata.pareto, center=F, scale=F)
+pca <- prcomp(logdata.pareto, center = F, scale = F)
+
+# If one wants toremove the data that is deemed unsignificant
+# logdata.pareto <- subset(logdata.pareto, colnames(logdata.pareto) %in% rownames(loadings.sig))
+```
+
+## Plotting
+
+### Principal Component Analysis
+
+```{r, echo=FALSE}
 
 # Display
 
@@ -66,16 +90,14 @@ plot(pca)
 biplot(pca)
 
 # Make a simple scores plot
-plot(pca$x[,1], pca$x[,2], type='p', cex=0, pch=20, main="Scores Plot", xlab="PC1", ylab="PC2")
-text(pca$x[,1], pca$x[,2], labels=rownames(pca$x), cex=1.0)
-abline(h=0, v=0, col="red")
+plot(pca$x[, 1], pca$x[, 2], type = "p", cex = 0, pch = 20, main = "Scores Plot", xlab = "PC1", ylab = "PC2")
+text(pca$x[, 1], pca$x[, 2], labels = rownames(pca$x), cex = 1.0)
+abline(h = 0, v = 0, col = "red")
 
 # Make a simple loadings plot (variance among variables)
-plot(pca$rotation[,1], pca$rotation[,2], type='p', cex=0.5, pch=20,main="Loadings Plot", xlab="PC1", ylab="PC2")
-abline(h=0, v=0, col="red")
-```
+plot(pca$rotation[, 1], pca$rotation[, 2], type = "p", cex = 0.5, pch = 20, main = "Loadings Plot", xlab = "PC1", ylab = "PC2")
+abline(h = 0, v = 0, col = "red")
 
-```{r}
 # Create a container called "results" for PCA results
 results <- summary(pca)
 
@@ -89,37 +111,41 @@ loadings.data <- as.data.frame(results$rotation)
 
 plot(loadings.data$PC1, loadings.data$PC2)
 pvalue <- 0.09
-abline(v=pvalue, col="red")
-abline(v=-pvalue, col="red")
-abline(h=pvalue, col="red")
-abline(h=-pvalue, col="red")
+abline(v = pvalue, col = "red")
+abline(v = -pvalue, col = "red")
+abline(h = pvalue, col = "red")
+abline(h = -pvalue, col = "red")
 
 # Make a new data frame with PC1, PC2, and PC3 loadings
-loadings.PC1.PC2 <- loadings.data[,1:3]
-loadings.PC1.PC2[1:6,1:3]  # look at the first few rows
+loadings.PC1.PC2 <- loadings.data[, 1:3]
+loadings.PC1.PC2[1:6, 1:3] # look at the first few rows
 
 # subset significant loadings
-loadings.sig <- subset(loadings.PC1.PC2,
-                       PC1 > pvalue | PC1 < -pvalue |
-                         PC2 > pvalue | PC2 < -pvalue)
+loadings.sig <- subset(
+  loadings.PC1.PC2,
+  PC1 > pvalue | PC1 < -pvalue |
+    PC2 > pvalue | PC2 < -pvalue
+)
 
 # sanity check - plot the results
 plot(loadings.sig$PC1, loadings.sig$PC2)
-
-# logdata.pareto.subset <- subset(logdata.pareto, rownames(logdata.pareto) %in% rownames(loadings.sig))
 ```
 
-```{r}
-####################################################
-# Heatmaps
-####################################################
 
+### Heatmap
+
+To display the data in a complete manner, a heatmap is able to show what variance there is in our dataset.
+
+```{r, echo=FALSE}
 library(gplots)
-heatmap.2(as.matrix(logdata.pareto), cexRow=0.5, cexCol=0.5 )
-
+heatmap.2(as.matrix(logdata.pareto), cexRow = 0.5, cexCol = 0.5)
 ```
 
 ## Clustering
+
+Now that we have analysed our heatmap, we could come to the conclusion, that there are five clusters, there seem to be different bands of variants in there.
+
+If we however calculate the optimal amount of clusters for our dataset with k-means, we will get only two clusters. This is an issue that we were unable to solve.
 
 ```{r}
 library(factoextra)
@@ -127,120 +153,256 @@ library(cluster)
 library(ggplot2)
 
 gap_stat <- clusGap(t(logdata.pareto),
-                    FUN = kmeans,
-                    K.max = 5)
+  FUN = kmeans,
+  K.max = 5
+)
 
+# Plot the optimal cluster count
 fviz_gap_stat(gap_stat)
 
-result <- (clara(logdata.pareto, 5))
+# Cluster the dataset
+result <- (clara(logdata.pareto, 3))
 
+# Plot the calculated cluster
 fviz_cluster(result, data = logdata.pareto)
-
 ```
 
-```{r}
-is.data.frame(logdata.pareto)
-```
+### Data Conversion
+
+To add a new column to our dataset we use `tibble` and firstly turn our data into a `DataFrame` and further add a new column with `add_column`
 
 ```{r}
 library(tibble)
 clustered_data <- as.data.frame(logdata.pareto) %>% add_column(cluster = result$clustering)
 ```
 
-```{r}
-for (cluster in unique(clustered_data$cluster)) {
-  boxplot(clustered_data[clustered_data$cluster == cluster,], main=cluster)
-}
-```
+## Add Ratios and Sums
+
+Since metabolite levels are a bit too much to work with in the long run, we used the sums and ratios to remove complexity of our datasets
 
 ```{r}
+sums <- function(val) {
+  df <- data.frame(matrix(nrow = nrow(val), ncol = 0))
 
-median_cluster <- list()
-for (cluster in unique(clustered_data$cluster)) {
-  median_cluster[[cluster]] <- apply(clustered_data[clustered_data$cluster == cluster, ], 2, median)
-} 
-```
-
-```{r}
-line_colors <- c("blue", "red", "green")
-new_color <- function(x) {
-  return(line_colors[[(x %% length(line_colors))+1]])
-}
-```
-
-```{r}
-plot(unlist(median_cluster[[1]][1:30]), 
-    type = "l", xlab = "metabolites", ylab = "concentration",
-    ylim=c(-1, 1),
-    main = "Median Cluster", xaxt = "n", col=new_color(1))
-
-axis(1, at = 1:30, labels=rownames(as.data.frame(median_cluster[[1]][1:30])))
-
-for (cluster in 2:length(median_cluster)) {
-  lines(unlist(median_cluster[[cluster]][1:30]), col=new_color(cluster))
-}
-
-legend("topright", legend = 1:length(median_cluster), col = line_colors, lwd = 2)
-```
-
-## Add Ratios
-```{r}
-ratios <- function(y) {
-  df <- data.frame(matrix(nrow = 357, ncol =0))
-
-  df$relative_overall_androgen_production_1 <- apply(y, 1, \(x) {return((x["An"] + x["Et"]) / (x["a.THF"] + x["THF"] + x["THE"]))})
-  df$relative_overall_androgen_production_2 <- apply(y, 1, \(x) {return((x["An"] + x["Et"] + x["A5.3b.17a"] + x["A5.3b.17b"] + x["DHEA"] + x["X16a.OH.DHEA"] + x["A5T.16a"]) / (x["a.THF"] + x["THF"] + x["THE"]))})
+  c19 <- c("An", "Et", "A5.3b.17b", "DHEA", "X16a.OH.DHEA", "A5T.16a")
+  c21 <- c("a.THF", "THF", "THE", "a.C", "b.C", "a.Cl", "b.Cl")
+  progesterone <- c("PT", "Po.5b.3a", "Po.5a.3a", "P5T.17a")
+  cortisole <- c("THE", "THF", "a.THF", 
+    "a.Cl", "b.Cl", "a.C", "b.C", "X6b.OH.F", 
+    "X20a.DHF", "X11.OH.An", "X11.OH.Et", "THA", "THB", "a.THB", c19)
   
-  df$relative_adrenal_androgen_production_1 <- apply(y, 1, \(x) {return((x["DHEA"]) / (x["a.THF"] + x["THF"] + x["THE"]))})
-  df$relative_adrenal_androgen_production_2 <- apply(y, 1, \(x) {return((x["DHEA"] + x["X16a.OH.DHEA"] + x["A5T.16a"])/(x["a.THF"] + x["THF"] + x["THE"]))})
-  
-  df$relative_overproduction_of_3bHSD_1 <- apply(y, 1, \(x) {return(x["DHEA"] / (x["An"] + x["Et"]))})
-  df$relative_overproduction_of_3bHSD_2 <- apply(y, 1, \(x) {return((x["DHEA"] + x["X16a.OH.DHEA"] + x["A5T.16a"]) / (x["An"] + x["Et"]))})
-  df$relative_overproduction_of_3bHSD_3 <- apply(y, 1, \(x) {return((x["DHEA"] + x["X16a.OH.DHEA"] + x["A5T.16a"]) / (x["a.THF"] + x["THE"] + x["THF"]))})
-  df$relative_overproduction_of_3bHSD_4 <- apply(y, 1, \(x) {return(x["P5T.17a"] / (x["a.THF"] + x["THF"] + x["THE"]))})
-  df$relative_overproduction_of_3bHSD_5 <- apply(y, 1, \(x) {return(x["P5T.17a"] / x["PT"])})
-
-  df$X21_hydroxylase_activity_1 <- apply(y, 1, \(x) {return((x["PT"] + x["Po.5b.3a"] + x["Po.5a.3a"]) / (x["a.THF"] + x["THF"] + x["THE"]))})
-  df$X21_hydroxylase_activity_2 <- apply(y, 1, \(x) {return((x["X11.O.Pt"] + x["PT"] + x["Po.5b.3a"] + x["Po.5a.3a"]) / (x["a.THF"] + x["THF"] + x["THE"]))})
-  df$X21_hydroxylase_activity_3 <- apply(y, 1, \(x) {return((x["X11.O.Pt"]) / (x["a.THF"] + x["THF"] + x["THE"]))})
-  df$X21_hydroxylase_activity_4 <- apply(y, 1, \(x) {return(x["X11.O.Pt"] / x["a.Cl"])})
-
-  df$X11b_hydroxylase_activity_1 <- apply(y, 1, \(x) {return(x["THS"] / (x["a.THF"] + x["THF"] + x["THE"]))})
-  df$X11b_hydroxylase_activity_2 <- apply(y, 1, \(x) {return((x["An"] + x["Et"]) / (x["X11.OH.An"] + x["X11.OH.Et"]))})
-
-  df$X17_hydroxylase_activity_global <- apply(y, 1, \(x) {return((x["THA"] + x["THB"] + x["a.THB"]) / (x["An"] + x["Et"]))})
-  df$X17_hydroxylase_activity_17a_hydroxylase_activity_d5 <- apply(y, 1, \(x) {return(x["P5D"] / x["P5T.17a"])})
-  df$X17_hydroxylase_activity_17a_hydroxylase_activity_d4 <- apply(y, 1, \(x) {return(x["PD"] / x["PT"])})
-  df$X17_hydroxylase_activity_17a_hydroxylase_activity_global <- apply(y, 1, \(x) {return((x["a.THF"] + x["THF"] + x["THE"]) / (x["An"] + x["Et"]))})
+  df$c19 <- apply(val[c19], 1, sum)
+  df$c21 <- apply(val[c21], 1, sum)
+  df$progesterone <- apply(val[progesterone], 1, sum)
+  df$cortisole <- apply(val[cortisole], 1, sum)
 
   return(df)
 }
 ```
 
 ```{r}
-combined_df <- cbind(clustered_data, ratios(clustered_data))
+ratios <- function(y) {
+  df <- data.frame(matrix(nrow = nrow(y), ncol = 0))
 
-heatmap(as.matrix(combined_df[,33:50]))
+  df$relative_overall_androgen_production_1 <- apply(y, 1, \(x)    {
+    return(
+      (x["An"] + x["Et"]) / (x["a.THF"] + x["THF"] + x["THE"])
+    )
+  })
+
+  df$relative_overall_androgen_production_2 <- apply(y, 1, \(x) {
+    return(
+      (x["An"] + x["Et"] + x["A5.3b.17a"] + x["A5.3b.17b"] + x["DHEA"] + x["X16a.OH.DHEA"] + x["A5T.16a"]) / (x["a.THF"] + x["THF"] + x["THE"])
+      )
+  })
+
+
+
+  df$relative_adrenal_androgen_production_1 <- apply(y, 1, \(x) {
+    return((x["DHEA"]) / (x["a.THF"] + x["THF"] + x["THE"]))
+  })
+
+  df$relative_adrenal_androgen_production_2 <- apply(y, 1, \(x) {
+    return((x["DHEA"] + x["X16a.OH.DHEA"] + x["A5T.16a"]) / (x["a.THF"] + x["THF"] + x["THE"]))
+  })
+
+
+
+  df$relative_overproduction_of_3bHSD_1 <- apply(y, 1, \(x) {
+    return(x["DHEA"] / (x["An"] + x["Et"]))
+  })
+
+  df$relative_overproduction_of_3bHSD_2 <- apply(y, 1, \(x) {
+    return((x["DHEA"] + x["X16a.OH.DHEA"] + x["A5T.16a"]) / (x["An"] + x["Et"]))
+  })
+
+  df$relative_overproduction_of_3bHSD_3 <- apply(y, 1, \(x) {
+    return((x["DHEA"] + x["X16a.OH.DHEA"] + x["A5T.16a"]) / (x["a.THF"] + x["THE"] + x["THF"]))
+  })
+
+  df$relative_overproduction_of_3bHSD_4 <- apply(y, 1, \(x) {
+    return(x["P5T.17a"] / (x["a.THF"] + x["THF"] + x["THE"]))
+  })
+
+  df$relative_overproduction_of_3bHSD_5 <- apply(y, 1, \(x) {
+    return(x["P5T.17a"] / x["PT"])
+  })
+
+
+
+  df$X21_hydroxylase_activity_1 <- apply(y, 1, \(x) {
+    return((x["PT"] + x["Po.5b.3a"] + x["Po.5a.3a"]) / (x["a.THF"] + x["THF"] + x["THE"]))
+  })
+
+  df$X21_hydroxylase_activity_2 <- apply(y, 1, \(x) {
+    return((x["X11.O.Pt"] + x["PT"] + x["Po.5b.3a"] + x["Po.5a.3a"]) / (x["a.THF"] + x["THF"] + x["THE"]))
+  })
+
+  df$X21_hydroxylase_activity_3 <- apply(y, 1, \(x) {
+    return((x["X11.O.Pt"]) / (x["a.THF"] + x["THF"] + x["THE"]))
+  })
+
+  df$X21_hydroxylase_activity_4 <- apply(y, 1, \(x) {
+    return(x["X11.O.Pt"] / x["a.Cl"])
+  })
+
+
+
+  df$X11b_hydroxylase_activity_1 <- apply(y, 1, \(x) {
+    return(x["THS"] / (x["a.THF"] + x["THF"] + x["THE"]))
+  })
+
+  df$X11b_hydroxylase_activity_2 <- apply(y, 1, \(x) {
+    return((x["An"] + x["Et"]) / (x["X11.OH.An"] + x["X11.OH.Et"]))
+  })
+
+
+
+  df$X17_hydroxylase_activity_global <- apply(y, 1, \(x) {
+    return((x["THA"] + x["THB"] + x["a.THB"]) / (x["An"] + x["Et"]))
+  })
+
+  df$X17_hydroxylase_activity_17a_hydroxylase_activity_d5 <- apply(y, 1, \(x) {
+    return(x["P5D"] / x["P5T.17a"])
+  })
+
+  df$X17_hydroxylase_activity_17a_hydroxylase_activity_d4 <- apply(y, 1, \(x) {
+    return(x["PD"] / x["PT"])
+  })
+
+  df$X17_hydroxylase_activity_17a_hydroxylase_activity_global <- apply(y, 1, \(x) {
+    return((x["a.THF"] + x["THF"] + x["THE"]) / (x["An"] + x["Et"]))
+  })
+
+  return(df)
+}
 ```
+
+```{r}
+combined_df <- cbind(clustered_data, ratios(dat2))
+combined_df <- cbind(combined_df, sums(dat2))
+```
+
+## Cluster based Plotting
+
+### Boxplot per Cluster
+
+Firstly we plot a boxplot for each cluster.
+
+```{r, echo=FALSE}
+for (cluster in unique(clustered_data$cluster)) {
+  boxplot(clustered_data[clustered_data$cluster == cluster, ], main = cluster)
+}
+```
+
+### Line of median metabolite for each cluster
+
+```{r}
+median_cluster <- list()
+for (cluster in unique(clustered_data$cluster)) {
+  median_cluster[[cluster]] <- apply(clustered_data[clustered_data$cluster == cluster, ], 2, median)
+}
+```
+
+```{r}
+# Little helper function to create multiple colors in a plot, could probably benefit from a few more
+line_colors <- c("blue", "red", "green")
+new_color <- function(x) {
+  return(line_colors[[(x %% length(line_colors)) + 1]])
+}
+```
+
+```{r, echo=FALSE}
+plot(unlist(median_cluster[[1]][1:30]),
+  type = "l", xlab = "metabolites", ylab = "concentration",
+  ylim = c(-1, 1),
+  main = "Median Cluster", xaxt = "n", col = new_color(1)
+)
+
+axis(1, at = 1:30, labels = rownames(as.data.frame(median_cluster[[1]][1:30])))
+
+for (cluster in 2:length(median_cluster)) {
+  lines(unlist(median_cluster[[cluster]][1:30]), col = new_color(cluster))
+}
+
+legend("topright", legend = 1:length(median_cluster), col = line_colors, lwd = 2)
+```
+
+### Boxplot for each cluster for the sums
+
+```{r, echo=FALSE}
+for(cluster in unique(combined_df$cluster)) {
+  boxplot(scale(combined_df[combined_df$cluster == cluster, 52:55], center=F, scale=T), main=paste('Cluster', cluster, 'Sums', sep=' '))
+}
+```
+
+### Heatmap for the Ratios
+
+```{r, echo=FALSE}
+heatmap(as.matrix(combined_df[, 33:51]))
+```
+
+### Metabolite Concentration per Cluster
 
 ```{r}
 median_cluster <- list()
 for (cluster in unique(combined_df$cluster)) {
   median_cluster[[cluster]] <- apply(combined_df[combined_df$cluster == cluster, ], 2, median)
-} 
+}
 ```
 
-```{r}
-plot(unlist(median_cluster[[1]][33:50]), 
-    type = "l", xlab = "metabolites", ylab = "concentration",
-    ylim=c(-1, 1),
-    main = "Median Ratios For Clusters", xaxt = "n", col=new_color(1))
+```{r, echo=FALSE}
 
-axis(1, at = 33:50, labels=rownames(as.data.frame(median_cluster[[1]][33:50])))
+plot(unlist(median_cluster[[1]][33:51]),
+  type = "l", xlab = "metabolites", ylab = "concentration",
+  ylim = c(-20, 20),
+  main = "Median Ratios For Clusters", xaxt = "n", col = new_color(1)
+)
+
+axis(1, at = 33:51, labels = rownames(as.data.frame(median_cluster[[1]][33:51])))
 
 for (cluster in 2:length(median_cluster)) {
-  lines(unlist(median_cluster[[cluster]][33:50]), col=new_color(cluster))
+  lines(unlist(median_cluster[[cluster]][33:51]), col = new_color(cluster))
 }
 
 legend("topright", legend = 1:length(median_cluster), col = line_colors, lwd = 2)
+```
+
+### Heatmap for each ratio based on the clusters
+```{r, echo=FALSE}
+
+library(pheatmap)
+selected_columns_list <- lapply(median_cluster, function(entry) entry[33:51])
+par(mar = c(4, 2, 2, 2))
+pheatmap(t(do.call(rbind, selected_columns_list)), height=2)
+```
+
+```{r, echo=FALSE}
+
+par(las = 2)
+par(mar = c(14, 3, 2, 2))
+for (cluster in seq_along(unique(combined_df$cluster))) {
+  boxplot(scale(combined_df[combined_df$cluster == cluster, 33:51]), height=1)
+}
+par(las=0)
 ```
