--- a/src/project.rmd
+++ b/src/project.rmd
@@ -209,13 +209,13 @@ sums <- function(val) {
 ratios <- function(y) {
   df <- data.frame(matrix(nrow = nrow(y), ncol = 0))
 
-  df$relative_overall_androgen_production_1 <- apply(y, 1, \(x)    {
+  df$rel_androgen_prod_1 <- apply(y, 1, \(x)    {
     return(
       (x["An"] + x["Et"]) / (x["a.THF"] + x["THF"] + x["THE"])
     )
   })
 
-  df$relative_overall_androgen_production_2 <- apply(y, 1, \(x) {
+  df$rel_androgen_prod_2 <- apply(y, 1, \(x) {
     return(
       (x["An"] + x["Et"] + x["A5.3b.17a"] + x["A5.3b.17b"] + x["DHEA"] + x["X16a.OH.DHEA"] + x["A5T.16a"]) / (x["a.THF"] + x["THF"] + x["THE"])
       )
@@ -223,79 +223,79 @@ ratios <- function(y) {
 
 
 
-  df$relative_adrenal_androgen_production_1 <- apply(y, 1, \(x) {
+  df$rel_androgen_1 <- apply(y, 1, \(x) {
     return((x["DHEA"]) / (x["a.THF"] + x["THF"] + x["THE"]))
   })
 
-  df$relative_adrenal_androgen_production_2 <- apply(y, 1, \(x) {
+  df$rel_androgen_2 <- apply(y, 1, \(x) {
     return((x["DHEA"] + x["X16a.OH.DHEA"] + x["A5T.16a"]) / (x["a.THF"] + x["THF"] + x["THE"]))
   })
 
 
 
-  df$relative_overproduction_of_3bHSD_1 <- apply(y, 1, \(x) {
+  df$rel_3bHSD_1 <- apply(y, 1, \(x) {
     return(x["DHEA"] / (x["An"] + x["Et"]))
   })
 
-  df$relative_overproduction_of_3bHSD_2 <- apply(y, 1, \(x) {
+  df$rel_3bHSD_2 <- apply(y, 1, \(x) {
     return((x["DHEA"] + x["X16a.OH.DHEA"] + x["A5T.16a"]) / (x["An"] + x["Et"]))
   })
 
-  df$relative_overproduction_of_3bHSD_3 <- apply(y, 1, \(x) {
+  df$rel_3bHSD_3 <- apply(y, 1, \(x) {
     return((x["DHEA"] + x["X16a.OH.DHEA"] + x["A5T.16a"]) / (x["a.THF"] + x["THE"] + x["THF"]))
   })
 
-  df$relative_overproduction_of_3bHSD_4 <- apply(y, 1, \(x) {
+  df$rel_3bHSD_4 <- apply(y, 1, \(x) {
     return(x["P5T.17a"] / (x["a.THF"] + x["THF"] + x["THE"]))
   })
 
-  df$relative_overproduction_of_3bHSD_5 <- apply(y, 1, \(x) {
+  df$rel_3bHSD_5 <- apply(y, 1, \(x) {
     return(x["P5T.17a"] / x["PT"])
   })
 
 
 
-  df$X21_hydroxylase_activity_1 <- apply(y, 1, \(x) {
+  df$X21_HDA_activity_1 <- apply(y, 1, \(x) {
     return((x["PT"] + x["Po.5b.3a"] + x["Po.5a.3a"]) / (x["a.THF"] + x["THF"] + x["THE"]))
   })
 
-  df$X21_hydroxylase_activity_2 <- apply(y, 1, \(x) {
+  df$X21_HDA_activity_2 <- apply(y, 1, \(x) {
     return((x["X11.O.Pt"] + x["PT"] + x["Po.5b.3a"] + x["Po.5a.3a"]) / (x["a.THF"] + x["THF"] + x["THE"]))
   })
 
-  df$X21_hydroxylase_activity_3 <- apply(y, 1, \(x) {
+  df$X21_HDA_activity_3 <- apply(y, 1, \(x) {
     return((x["X11.O.Pt"]) / (x["a.THF"] + x["THF"] + x["THE"]))
   })
 
-  df$X21_hydroxylase_activity_4 <- apply(y, 1, \(x) {
+  df$X21_HDA_activity_4 <- apply(y, 1, \(x) {
     return(x["X11.O.Pt"] / x["a.Cl"])
   })
 
 
 
-  df$X11b_hydroxylase_activity_1 <- apply(y, 1, \(x) {
+  df$X11b_HDA_activity_1 <- apply(y, 1, \(x) {
     return(x["THS"] / (x["a.THF"] + x["THF"] + x["THE"]))
   })
 
-  df$X11b_hydroxylase_activity_2 <- apply(y, 1, \(x) {
+  df$X11b_HDA_activity_2 <- apply(y, 1, \(x) {
     return((x["An"] + x["Et"]) / (x["X11.OH.An"] + x["X11.OH.Et"]))
   })
 
 
 
-  df$X17_hydroxylase_activity_global <- apply(y, 1, \(x) {
+  df$X17_HDA_activity_global <- apply(y, 1, \(x) {
     return((x["THA"] + x["THB"] + x["a.THB"]) / (x["An"] + x["Et"]))
   })
 
-  df$X17_hydroxylase_activity_17a_hydroxylase_activity_d5 <- apply(y, 1, \(x) {
+  df$X17a_HDA_activity_d5 <- apply(y, 1, \(x) {
     return(x["P5D"] / x["P5T.17a"])
   })
 
-  df$X17_hydroxylase_activity_17a_hydroxylase_activity_d4 <- apply(y, 1, \(x) {
+  df$X17_HDA_activity_d4 <- apply(y, 1, \(x) {
     return(x["PD"] / x["PT"])
   })
 
-  df$X17_hydroxylase_activity_17a_hydroxylase_activity_global <- apply(y, 1, \(x) {
+  df$X17_HDA_activity_global_a <- apply(y, 1, \(x) {
     return((x["a.THF"] + x["THF"] + x["THE"]) / (x["An"] + x["Et"]))
   })
 
